--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 app/data/*
 !app/data/.data_files_go_here.txt
 output
+app/thredds/files/config/tomcat/*.crt
+app/thredds/files/config/tomcat/*.key
+app/thredds/files/contents/thredds/cache/*
+app/thredds/files/logs/thredds/*
+app/thredds/files/logs/tomcat/*
+!**/*/.keepme
