Removed references to obsolete "app" directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 /.project
 /.pydevproject
 /.idea
-app/data/*
-!app/data/.data_files_go_here.txt
+data/*
+!data/.data_files_go_here.txt
 output
-app/thredds/files/config/tomcat/*.crt
-app/thredds/files/config/tomcat/*.key
-app/thredds/files/contents/thredds/cache/*
-app/thredds/files/logs/thredds/*
-app/thredds/files/logs/tomcat/*
+thredds/files/config/tomcat/*.crt
+thredds/files/config/tomcat/*.key
+thredds/files/contents/thredds/cache/*
+thredds/files/logs/thredds/*
+thredds/files/logs/tomcat/*
 !**/*/.keepme
