--- a/nhmusgs-nhm-prms/Dockerfile
+++ b/nhmusgs-nhm-prms/Dockerfile
@@ -2,8 +2,10 @@ FROM nhmusgs/base
 
 LABEL maintainer="ashalper@usgs.gov"
 
+ARG VERSION_TAG_PRMS=5.0.0
+
 # Build PRMS
-RUN git clone https://github.com/nhm-usgs/prms.git --branch 5.0.0 --depth=1 $SOURCE_DIR/prms && \
+RUN git clone https://github.com/nhm-usgs/prms.git --branch $VERSION_TAG_PRMS --depth=1 $SOURCE_DIR/prms && \
     cd $SOURCE_DIR/prms && \
     make && \
     rm -rf .git || true && \
@@ -14,7 +16,7 @@ RUN git clone https://github.com/nhm-usgs/prms.git --branch 5.0.0 --depth=1 $SOU
 COPY --chown=nhm nhm-prms /usr/local/bin
 
 RUN chmod 744 /usr/local/bin/nhm-prms && \
-    chown -R $USER $SOURCE_DIR/prms 
+    chown -R $USER $SOURCE_DIR/prms
 
 USER $USER
 
