--- a/nhmusgs-ofp/Dockerfile
+++ b/nhmusgs-ofp/Dockerfile
@@ -2,20 +2,22 @@ FROM nhmusgs/base
 
 LABEL maintainer="ashalper@usgs.gov"
 
+ARG VERSION_TAG_OFP=v0.1.1
+
 # Build ONHM Fetcher Parser
-RUN git clone --depth=1 --branch v0.1.0 \
+RUN git clone --depth=1 --branch $VERSION_TAG_OFP \
     https://github.com/nhm-usgs/onhm-fetcher-parser.git $SOURCE_DIR/onhm-fetcher-parser && \
     cd $SOURCE_DIR/onhm-fetcher-parser && \
     rm -rf .git || true && \
     rm -rf .idea || true && \
-    rm .gitignore || true 
+    rm .gitignore || true
 
 # ofp script
 COPY --chown=nhm ofp /usr/local/bin
 
 RUN mkdir -p /var/lib/nhm/ofp/Output
 
-RUN chmod 744 /usr/local/bin/ofp 
+RUN chmod 744 /usr/local/bin/ofp
 
 USER $USER
 
