--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /.idea
 data/*
 !data/.data_files_go_here.txt
-output
+Output
 thredds/files/config/tomcat/*.crt
 thredds/files/config/tomcat/*.key
 thredds/files/contents/thredds/cache/*
