untested changes.  I updated the HRU_SOURCE to include new .gz that contains updated weight.csv file.  I also updated the ofp, with new tag v0.1.2, this version has new cmd options and uses new script to reflect those options.  I am unsure particularly of the changes I made to the ofp: environment: variables in the docker-compose.yml file. I added START_DATE and END_DATE as new ENV variables.  Not sure if these should be in quotes or...

--- a/nhmusgs-ofp/Dockerfile
+++ b/nhmusgs-ofp/Dockerfile
@@ -2,7 +2,7 @@ FROM nhmusgs/base
 
 LABEL maintainer="ashalper@usgs.gov"
 
-ARG VERSION_TAG_OFP=v0.1.1
+ARG VERSION_TAG_OFP=v0.1.2
 
 # Build ONHM Fetcher Parser
 RUN git clone --depth=1 --branch $VERSION_TAG_OFP \
@@ -24,6 +24,9 @@ USER $USER
 WORKDIR /home/$USER
 
 ENV NUMDAYS=60
+ENV START_DATE = 2019_01_01
+ENV END_DATE = 2019_01_02
+
 
 # convenience soft-links
 RUN ln -s $SOURCE_DIR/onhm-fetcher-parser $HOMEDIR/onhm-fetcher-parser && \
