--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     networks:
       nhmnet:
     environment:
-      - HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/Data_hru_shp.tar.gz
+      - HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/Data_hru_shp.tar_v2.gz
       - PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/markstro/NHM-PRMS_CONUS.zip
     volumes:
       - nhm:/var/lib/nhm
@@ -43,6 +43,8 @@ services:
     container_name: ofp
     environment:
       - NUMDAYS=${NUMDAYS-60}
+      - START_DATE = 2019_01_01
+      - END_DATE = 2019_01_02
     volumes:
       - nhm:/var/lib/nhm
 
