--- a/nhmusgs-ofp/Dockerfile
+++ b/nhmusgs-ofp/Dockerfile
@@ -24,8 +24,8 @@ USER $USER
 WORKDIR /home/$USER
 
 ENV NUMDAYS=60
-ENV START_DATE = 2019_01_01
-ENV END_DATE = 2019_01_02
+ENV START_DATE=2019-01-01
+ENV END_DATE=2019-01-02
 
 
 # convenience soft-links
