--- a/nhmusgs-base/Dockerfile
+++ b/nhmusgs-base/Dockerfile
@@ -23,6 +23,11 @@ RUN git clone https://github.com/nhm-usgs/onhm-runners.git --branch $VERSION_ONH
     rm -rf .git || true && \
     rm .gitignore || true
 
+# shell functions used by more than one entry-point script
+RUN mkdir -p /usr/local/share/nhm
+COPY --chown=nhm nhm.sh /usr/local/share/nhm
+RUN chmod 744 /usr/local/share/nhm/nhm.sh
+
 RUN mkdir -p /var/lib/nhm/ofp/Output
 
 ENV USER=nhm
