Updated version numbers.

--- a/nhmusgs-gridmet/Dockerfile
+++ b/nhmusgs-gridmet/Dockerfile
@@ -11,8 +11,10 @@ FROM nhmusgs/base
 
 LABEL maintainer="ashalper@usgs.gov"
 
+ARG VERSION_TAG_GRIDMET=v0.1.6
+
 # check out source from repo.
-RUN git clone --depth=1 --branch v0.1.5 \
+RUN git clone --depth=1 --branch $VERSION_TAG_GRIDMET \
     https://github.com/nhm-usgs/onhm-fetcher-parser.git $SOURCE_DIR/onhm-fetcher-parser
 
 # entrypoint
