Modified compose-test.sh to run gridmet container.

--- a/nhmusgs-gridmet/Dockerfile
+++ b/nhmusgs-gridmet/Dockerfile
@@ -15,15 +15,12 @@ ARG VERSION_TAG_GRIDMET=v0.1.6
 
 # check out source from repo.
 RUN git clone --depth=1 --branch $VERSION_TAG_GRIDMET \
-    https://github.com/nhm-usgs/onhm-fetcher-parser.git $SOURCE_DIR/onhm-fetcher-parser
-
-# entrypoint
-COPY --chown=nhm gridmet /usr/local/bin
-
-RUN chmod 744 /usr/local/bin/gridmet
+    https://github.com/nhm-usgs/onhm-fetcher-parser.git \
+    $SOURCE_DIR/onhm-fetcher-parser
 
 USER $USER
 
-WORKDIR /home/$USER
+WORKDIR $SOURCE_DIR
 
-ENTRYPOINT ["/bin/bash", "-c", "/usr/local/bin/gridmet"]
+ENTRYPOINT \
+  ["/opt/conda/bin/python", "-u", "onhm-fetcher-parser/pkg/Gridmet_current.py"]
