Added "chgrp -R" command to put objects under /var/lib/nhm in the:
"nhm" group.

--- a/nhmusgs-base/Dockerfile
+++ b/nhmusgs-base/Dockerfile
@@ -46,6 +46,7 @@ ENV USER=nhm
 RUN useradd -ms /bin/bash $USER
 
 RUN chown -R $USER /var/lib/nhm
+RUN chgrp -R $USER /var/lib/nhm
 
 # shell functions used by more than one entry-point script
 RUN mkdir -p /usr/local/share/nhm
