Added COPY command to install entrypoint script.

--- a/nhmusgs-nhm-restart/Dockerfile
+++ b/nhmusgs-nhm-restart/Dockerfile
@@ -4,6 +4,8 @@ LABEL maintainer="ashalper@usgs.gov"
 
 ARG VERSION_TAG_PRMS=5.0.0
 
+COPY --chown=nhm nhm-restart /usr/local/bin
+
 USER $USER
 
 WORKDIR /home/$USER
