--- a/nhmusgs-nhm-restart/Dockerfile
+++ b/nhmusgs-nhm-restart/Dockerfile
@@ -5,6 +5,7 @@ LABEL maintainer="ashalper@usgs.gov"
 ARG VERSION_TAG_PRMS=5.0.0
 
 COPY --chown=nhm nhm-restart /usr/local/bin
+RUN chmod 744 /usr/local/bin/nhm-restart
 
 USER $USER
 
