Some mods, got first prms working, restart not working, test for restart in prms not working

--- a/nhmusgs-nhm-prms/Dockerfile
+++ b/nhmusgs-nhm-prms/Dockerfile
@@ -20,6 +20,8 @@ RUN chmod 744 /usr/local/bin/prms && \
 
 USER $USER
 
+ENV RESTART=0
+
 WORKDIR /home/$USER
 
 ENTRYPOINT ["/bin/bash", "-c", "/usr/local/bin/prms", "$RESTART"]
