--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,8 @@ services:
         - "gov.usgs.nhm.image.docker.type=PRMS"
     image: nhmusgs/nhm-prms
     container_name: nhm-prms
+    environment:
+      - END_DATE=2019-07-15
     volumes:
       - nhm:/var/lib/nhm
 
