--- a/nhmusgs-nhm-prms/Dockerfile
+++ b/nhmusgs-nhm-prms/Dockerfile
@@ -20,8 +20,6 @@ RUN chmod 744 /usr/local/bin/prms && \
 
 USER $USER
 
-ENV RESTART=0
-
 WORKDIR /home/$USER
 
-ENTRYPOINT ["/bin/bash", "-c", "/usr/local/bin/prms", "$RESTART"]
+ENTRYPOINT ["/bin/bash", "-c", "/usr/local/bin/prms"]
