Base Dockerfile Updates ---
- Remove some comments
- Remove upgrading installed packages via apt-get. This can introduce unintended consequences
- Switch to using a specific version of continuumio/miniconda3 image instead of latest
- Merge all conda operations into a single RUN command, saving half a gigabyte of finished Docker image
- Combine user and group ownership changes into one command

--- a/nhmusgs-base/Dockerfile
+++ b/nhmusgs-base/Dockerfile
@@ -1,34 +1,32 @@
-# using Miniconda 3 as the base image...
-FROM continuumio/miniconda3:latest
+FROM continuumio/miniconda3:4.7.10
 
 LABEL maintainer="ashalper@usgs.gov"
 
-# ...check for any Debian, installed packages updates, upgrade them and install
-# additional packages
-RUN apt-get update && apt-get -y upgrade && \
+# Update debian repository cache, install additional packages
+RUN apt-get update && \
     apt-get -y install dialog file gcc gfortran make procps unzip && \
     apt-get autoclean && apt-get purge
 
 # Update/upgrade Conda
-RUN conda update -n base conda -y 
-RUN conda install -n base -c defaults -c conda-forge \
-    python=3.6 \
-    bottleneck \
-    cartopy \
-    dask \
-    geopandas \
-    jupyter \
-    matplotlib \
-    netcdf4 \
-    notebook=5.7.4 \
-    numpy \
-    pandas \
-    rasterio \
-    rasterstats \
-    scipy \
-    xarray \
-    xmltodict
-RUN conda clean -a
+RUN conda update -n base conda -y && \
+  conda install -n base -c defaults -c conda-forge \
+  python=3.6 \
+  bottleneck \
+  cartopy \
+  dask \
+  geopandas \
+  jupyter \
+  matplotlib \
+  netcdf4 \
+  notebook=5.7.4 \
+  numpy \
+  pandas \
+  rasterio \
+  rasterstats \
+  scipy \
+  xarray \
+  xmltodict && \
+  conda clean -a
 
 ENV SOURCE_DIR=/usr/local/src
 
@@ -45,15 +43,14 @@ ENV USER=nhm
 
 RUN useradd -ms /bin/bash $USER
 
-RUN chown -R $USER /var/lib/nhm
-RUN chgrp -R $USER /var/lib/nhm
+VOLUME ["/var/lib/nhm"]
+
+RUN chown -R $USER:$USER /var/lib/nhm
 
 # shell functions used by more than one entry-point script
 RUN mkdir -p /usr/local/share/nhm
-RUN chown -R $USER /usr/local/share/nhm
-COPY --chown=$USER nhm.sh /usr/local/share/nhm
+COPY nhm.sh /usr/local/share/nhm
+RUN chown -R $USER:$USER /usr/local/share/nhm
 RUN chmod 744 /usr/local/share/nhm/nhm.sh
 
 ENV HOMEDIR=/home/$USER
-
-VOLUME ["/var/lib/nhm"]
