Data loader- use latest base image for docker, defer ownership of hell script fro COPY to later, remove NUMDAYS env

--- a/nhmusgs-data-loader/Dockerfile
+++ b/nhmusgs-data-loader/Dockerfile
@@ -1,15 +1,14 @@
-FROM nhmusgs/base
+FROM nhmusgs/base:latest
 
 LABEL maintainer="ashalper@usgs.gov"
 
-COPY --chown=nhm nhm /usr/local/bin
+COPY nhm /usr/local/bin
 
-RUN chmod 744 /usr/local/bin/nhm
+RUN chown $USER:$USER /usr/local/bin/nhm && \
+  chmod 744 /usr/local/bin/nhm
 
 USER $USER
 
 WORKDIR /home/$USER
-
-ENV NUMDAYS=60
 
 ENTRYPOINT ["/bin/bash", "-c", "/usr/local/bin/nhm"]
