Use latest base image, defer ownership of binary, remove NUMDAYS

--- a/nhmusgs-ncf2cbh/Dockerfile
+++ b/nhmusgs-ncf2cbh/Dockerfile
@@ -1,15 +1,14 @@
-FROM nhmusgs/base
+FROM nhmusgs/base:latest
 
 LABEL maintainer="ashalper@usgs.gov"
 
-COPY --chown=nhm ncf2cbh /usr/local/bin
+COPY ncf2cbh /usr/local/bin
 
-RUN chmod 744 /usr/local/bin/ncf2cbh
+RUN chown $USER:$USER /usr/local/bin/ncf2cbh && \
+  chmod 744 /usr/local/bin/ncf2cbh
 
 USER $USER
 
 WORKDIR /home/$USER
-
-ENV NUMDAYS=60
 
 ENTRYPOINT ["/bin/bash", "-c", "/usr/local/bin/ncf2cbh"]
