Use latest base image, defer ownership of binary, remove NUMDAYS env

--- a/nhmusgs-nhm-out2ncf/Dockerfile
+++ b/nhmusgs-nhm-out2ncf/Dockerfile
@@ -1,15 +1,14 @@
-FROM nhmusgs/base
+FROM nhmusgs/base:latest
 
 LABEL maintainer="ashalper@usgs.gov"
 
-COPY --chown=nhm out2ncf /usr/local/bin
+COPY out2ncf /usr/local/bin
 
-RUN chmod 744 /usr/local/bin/out2ncf
+RUN chown $USER:$USER /usr/local/bin/out2ncf && \
+  chmod 744 /usr/local/bin/out2ncf
 
 USER $USER
 
 WORKDIR /home/$USER
-
-ENV NUMDAYS=60
 
 ENTRYPOINT ["/bin/bash", "-c", "/usr/local/bin/out2ncf"]
