Clean up git checkout of gridmet

--- a/nhmusgs-gridmet/Dockerfile
+++ b/nhmusgs-gridmet/Dockerfile
@@ -7,7 +7,10 @@ ARG VERSION_TAG_GRIDMET=v0.1.6
 # check out source from repo.
 RUN git clone --depth=1 --branch $VERSION_TAG_GRIDMET \
     https://github.com/nhm-usgs/onhm-fetcher-parser.git \
-    $SOURCE_DIR/onhm-fetcher-parser
+    $SOURCE_DIR/onhm-fetcher-parser && \
+    cd $SOURCE_DIR/onhm-fetcher-parser && \
+    rm -rf .git && \
+    rm .gitattributes .gitignore README.md
 
 USER $USER
 
