Changes to Dockerfiles with git commands and conda commands to resolve issue of root cert

--- a/nhmusgs-gridmet/Dockerfile
+++ b/nhmusgs-gridmet/Dockerfile
@@ -7,7 +7,7 @@ ARG VERSION_TAG_GRIDMET=v0.1.6
 # check out source from repo.
 RUN git clone --depth=1 --branch $VERSION_TAG_GRIDMET \
     https://github.com/nhm-usgs/onhm-fetcher-parser.git \
-    $SOURCE_DIR/onhm-fetcher-parser
+    $SOURCE_DIR/onhm-fetcher-parser -c http.sslVerify=false
 
 USER $USER
 
