--- a/nhmusgs-ofp/Dockerfile
+++ b/nhmusgs-ofp/Dockerfile
@@ -6,7 +6,7 @@ ARG VERSION_TAG_OFP=v0.1.6
 
 # Build ONHM Fetcher Parser
 RUN git clone --depth=1 --branch $VERSION_TAG_OFP \
-    https://github.com/nhm-usgs/onhm-fetcher-parser.git $SOURCE_DIR/onhm-fetcher-parser && \
+    https://github.com/nhm-usgs/onhm-fetcher-parser.git $SOURCE_DIR/onhm-fetcher-parser -c http.sslVerify=false && \
     cd $SOURCE_DIR/onhm-fetcher-parser && \
     rm -rf .git || true && \
     rm -rf .idea || true && \
