--- a/nhmusgs-base/Dockerfile
+++ b/nhmusgs-base/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && \
     apt-get autoclean && apt-get purge
 
 # Update/upgrade Conda
-RUN conda update -n base conda -y --insecure && \
+RUN conda update -n base conda -y && \
   conda install -n base -c defaults -c conda-forge \
     python=3.6 \
     bottleneck \
@@ -26,15 +26,14 @@ RUN conda update -n base conda -y --insecure && \
     rasterstats \
     scipy \
     xarray \
-    xmltodict \
-    --insecure && \
+    xmltodict && \
   conda clean -a
 
 ENV SOURCE_DIR=/usr/local/src
 
-ARG VERSION_ONHM_RUNNERS=0.1.4
+ARG VERSION_ONHM_RUNNERS=0.1.3
 
-RUN git clone https://github.com/nhm-usgs/onhm-runners.git --branch $VERSION_ONHM_RUNNERS --depth=1 $SOURCE_DIR/onhm-runners -c http.sslVerify=false && \
+RUN git clone https://github.com/nhm-usgs/onhm-runners.git --branch $VERSION_ONHM_RUNNERS --depth=1 $SOURCE_DIR/onhm-runners && \
     cd $SOURCE_DIR/onhm-runners && \
     rm -rf .git && \
     rm .gitignore README.md .project .pydevproject
