Replaced "/var/ftp" with "/nhm" in anon_ftp service's "volumes" section.

--- a/docker-compose-testing.yml
+++ b/docker-compose-testing.yml
@@ -17,7 +17,7 @@ services:
         aliases:
           - nhmusgsftp
     volumes:
-      - ./data:/var/ftp:ro
+      - ./data:/nhm:ro
     environment:
       - ANON_MAX_RATE=0
 
