--- a/nhmusgs-base/Dockerfile
+++ b/nhmusgs-base/Dockerfile
@@ -38,14 +38,14 @@ RUN git clone https://github.com/nhm-usgs/onhm-runners.git --branch $VERSION_ONH
     rm -rf .git && \
     rm .gitignore README.md .project .pydevproject
 
-RUN mkdir -p /var/lib/nhm/ofp/Output
+RUN mkdir -p /nhm/ofp/Output
 
 ENV USER=nhm
 
 RUN useradd -ms /bin/bash $USER
 
-RUN chown -R $USER /var/lib/nhm
-RUN chgrp -R $USER /var/lib/nhm
+RUN chown -R $USER /nhm
+RUN chgrp -R $USER /nhm
 
 # shell functions used by more than one entry-point script
 RUN mkdir -p /usr/local/share/nhm
@@ -55,4 +55,4 @@ RUN chmod 744 /usr/local/share/nhm/nhm.sh
 
 ENV HOMEDIR=/home/$USER
 
-VOLUME ["/var/lib/nhm"]
+VOLUME ["/nhm"]
