--- a/nhmusgs-ofp/Dockerfile
+++ b/nhmusgs-ofp/Dockerfile
@@ -15,7 +15,7 @@ RUN git clone --depth=1 --branch $VERSION_TAG_OFP \
 # ofp script
 COPY --chown=nhm ofp /usr/local/bin
 
-RUN mkdir -p /var/lib/nhm/ofp/Output
+RUN mkdir -p /nhm/ofp/Output
 
 RUN chmod 744 /usr/local/bin/ofp
 
