Updated name of entry-point script in COPY command.

--- a/nhmusgs-data-loader/Dockerfile
+++ b/nhmusgs-data-loader/Dockerfile
@@ -2,7 +2,7 @@ FROM nhmusgs/base
 
 LABEL maintainer="ashalper@usgs.gov"
 
-COPY --chown=nhm nhm /usr/local/bin
+COPY --chown=nhm data-loader /usr/local/bin
 
 RUN chmod 744 /usr/local/bin/data-loader
 
