Re-declared anon_ftp "volumes" at the global scope.

--- a/docker-compose-testing.yml
+++ b/docker-compose-testing.yml
@@ -16,8 +16,6 @@ services:
       nhmnet:
         aliases:
           - nhmusgsftp
-    volumes:
-      - ./data:/nhm:ro
     environment:
       - ANON_MAX_RATE=0
 
@@ -27,3 +25,6 @@ services:
       - PRMS_SOURCE=ftp://nhmusgsftp/NHM-PRMS_CONUS.zip
     depends_on:
       - anon_ftp
+
+volumes:
+  data:
