Replaced direct call to Python in ENTRYPOINT with Bash wrapper script.

--- a/nhmusgs-gridmet/Dockerfile
+++ b/nhmusgs-gridmet/Dockerfile
@@ -4,6 +4,10 @@ LABEL maintainer="ashalper@usgs.gov"
 
 ARG VERSION_TAG_GRIDMET=v0.1.6
 
+COPY --chown=nhm gridmet /usr/local/bin
+
+RUN chmod 744 /usr/local/bin/gridmet
+
 # check out source from repo.
 RUN git clone --depth=1 --branch $VERSION_TAG_GRIDMET \
     https://github.com/nhm-usgs/onhm-fetcher-parser.git \
@@ -13,5 +17,4 @@ USER $USER
 
 WORKDIR $SOURCE_DIR
 
-ENTRYPOINT \
-  ["/opt/conda/bin/python", "-u", "onhm-fetcher-parser/pkg/Gridmet_current.py"]
+ENTRYPOINT ["/bin/bash", "-c", "/usr/local/bin/gridmet"]
