--- a/nhmusgs-ncf2cbh/Dockerfile
+++ b/nhmusgs-ncf2cbh/Dockerfile
@@ -2,11 +2,14 @@ FROM nhmusgs/base
 
 LABEL maintainer="ashalper@usgs.gov"
 
+COPY --chown=nhm ncf2cbh /usr/local/bin
+
+RUN chmod 744 /usr/local/bin/ncf2cbh
+
 USER $USER
 
 WORKDIR /home/$USER
 
 ENV NUMDAYS=60
 
-ENTRYPOINT \
-  ["/opt/conda/bin/python", "-u", "/usr/local/src/onhm-runners/ncf2cbh/ncf2cbh.py"]
+ENTRYPOINT ["/bin/bash", "-c", "/usr/local/bin/ncf2cbh"]
