--- a/nhmusgs-verifier/Dockerfile
+++ b/nhmusgs-verifier/Dockerfile
@@ -4,6 +4,10 @@ LABEL maintainer="ashalper@usgs.gov"
 
 ARG VERSION_TAG_VERIFY=0.1.1
 
+COPY --chown=nhm verifier /usr/local/bin
+
+RUN chmod 744 /usr/local/bin/verifier
+
 RUN git clone https://github.com/nhm-usgs/onhm-verify-eval.git --branch $VERSION_TAG_VERIFY --depth=1 $SOURCE_DIR/onhm-verify-eval && \
     cd $SOURCE_DIR/onhm-verify-eval && \
     rm -rf .git || true && \
@@ -14,5 +18,4 @@ USER $USER
 
 WORKDIR /home/$USER
 
-ENTRYPOINT \
-  ["/opt/conda/bin/python", "-u", "/usr/local/src/onhm-verify-eval/src/prms_verifier.py"]
+ENTRYPOINT ["/bin/bash", "-c", "/usr/local/bin/verifier"]
