Added "-c advice.detachedHead=false" to "git clone" commands.

--- a/nhmusgs-gridmet/Dockerfile
+++ b/nhmusgs-gridmet/Dockerfile
@@ -9,7 +9,7 @@ COPY --chown=nhm gridmet /usr/local/bin
 RUN chmod 744 /usr/local/bin/gridmet
 
 # check out source from repo.
-RUN git clone --depth=1 --branch $VERSION_TAG_GRIDMET \
+RUN git -c advice.detachedHead=false clone --depth=1 --branch $VERSION_TAG_GRIDMET \
     https://github.com/nhm-usgs/onhm-fetcher-parser.git \
     $SOURCE_DIR/onhm-fetcher-parser
 
