--- a/nhmusgs-base/Dockerfile
+++ b/nhmusgs-base/Dockerfile
@@ -37,7 +37,7 @@ ARG VERSION_ONHM_RUNNERS=0.1.4
 # https://stackoverflow.com/questions/9072376/configure-git-to-accept-a-particular-self-signed-server-certificate-for-a-partic
 RUN if [ "$BUILDING_IN_USGS_GOV" = true ]; then wget http://sslhelp.doi.net/docs/DOIRootCA2.cer && git config --global http.sslCAInfo DOIRootCA2.cer ; fi
 
-RUN git clone https://github.com/nhm-usgs/onhm-runners.git --branch $VERSION_ONHM_RUNNERS --depth=1 $SOURCE_DIR/onhm-runners && \
+RUN git -c advice.detachedHead=false clone https://github.com/nhm-usgs/onhm-runners.git --branch $VERSION_ONHM_RUNNERS --depth=1 $SOURCE_DIR/onhm-runners && \
     cd $SOURCE_DIR/onhm-runners && \
     rm -rf .git && \
     rm .gitignore README.md .project .pydevproject
