--- a/nhmusgs-ofp/Dockerfile
+++ b/nhmusgs-ofp/Dockerfile
@@ -5,7 +5,7 @@ LABEL maintainer="ashalper@usgs.gov"
 ARG VERSION_TAG_OFP=v0.1.6
 
 # Build ONHM Fetcher Parser
-RUN git clone --depth=1 --branch $VERSION_TAG_OFP \
+RUN git -c advice.detachedHead=false clone --depth=1 --branch $VERSION_TAG_OFP \
     https://github.com/nhm-usgs/onhm-fetcher-parser.git $SOURCE_DIR/onhm-fetcher-parser && \
     cd $SOURCE_DIR/onhm-fetcher-parser && \
     rm -rf .git || true && \
