--- a/nhmusgs-verifier/Dockerfile
+++ b/nhmusgs-verifier/Dockerfile
@@ -8,7 +8,7 @@ COPY --chown=nhm verifier /usr/local/bin
 
 RUN chmod 744 /usr/local/bin/verifier
 
-RUN git clone https://github.com/nhm-usgs/onhm-verify-eval.git --branch $VERSION_TAG_VERIFY --depth=1 $SOURCE_DIR/onhm-verify-eval && \
+RUN git -c advice.detachedHead=false clone https://github.com/nhm-usgs/onhm-verify-eval.git --branch $VERSION_TAG_VERIFY --depth=1 $SOURCE_DIR/onhm-verify-eval && \
     cd $SOURCE_DIR/onhm-verify-eval && \
     rm -rf .git || true && \
     rm .gitignore || true && \
