Added NHM_DATA_DIR and NHM_DRY_RUN variables to nhm.env.

--- a/nhm.env
+++ b/nhm.env
@@ -2,3 +2,5 @@ export HRU_DATA_PKG=Data_hru_shp_v2.tar.gz
 export PRMS_DATA_PKG=NHM-PRMS_CONUS.zip
 export HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
 export PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/markstro/$PRMS_DATA_PKG
+export NHM_DATA_DIR=/nhm
+export NHM_DRY_RUN=false
