Added header block and comments.

--- a/nhm.env
+++ b/nhm.env
@@ -1,6 +1,32 @@
+# U.S. Geological Survey
+#
+# File - nhm.env
+#
+# Purpose - Set NHM environment variables for the benefit of Shifter.
+#
+# Author - Andrew Halper
+#
+
+# Set environment variables for the benefit of Shifter, and only for
+# the benefit of Shifter. If running on Docker, this file will have no
+# effect.
+
+# name of HRU shapefile archive
 export HRU_DATA_PKG=Data_hru_shp_v2.tar.gz
+
+# name of PRMS data file archive
 export PRMS_DATA_PKG=NHM-PRMS_CONUS.zip
+
+# HRU shapefile archive URL
 export HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
+
+# PRMS data file archive URL
 export PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/markstro/$PRMS_DATA_PKG
+
+# path to download/data directory on local file-system
 export NHM_DATA_DIR=/nhm
+
+# When "true", tell the Docker entry-point scripts to print values of
+# relevant environment variables to stdout, then exit, without running
+# data processing process in container. Useful for debugging.
 export NHM_DRY_RUN=false
