--- a/nhm.env
+++ b/nhm.env
@@ -30,3 +30,9 @@ export NHM_DATA_DIR=/nhm
 # relevant environment variables to stdout, then exit, without running
 # data processing process in container. Useful for debugging.
 export NHM_DRY_RUN=false
+
+# When "true", skip running the gridmet container. Up-to-date Gridmet
+# data is not typically available until ~2:00 p.m., so disabling the
+# gridmet container can be useful in development to prevent the
+# pipeline from stopping at this step with an error.
+export GRIDMET_DISABLE=false
