Added NHM_INTERVAL environment variable to nhm.env.

--- a/nhm.env
+++ b/nhm.env
@@ -36,3 +36,10 @@ export NHM_DRY_RUN=false
 # gridmet container can be useful in development to prevent the
 # pipeline from stopping at this step with an error.
 export GRIDMET_DISABLE=false
+
+# Simulation interval. Presently used only in testing to diminish
+# pipeline run-time to a point where interactive testing is
+# feasible. Format is ISO 8601 time interval
+# (https://en.wikipedia.org/wiki/ISO_8601#Time_intervals). Set to
+# 2019-08-21/2019-08-22 presently, if/when needed.
+export NHM_INTERVAL=
