--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
         - "gov.usgs.nhm.image.docker.application=NHM"
         - "gov.usgs.nhm.image.docker.type=Base Image"
     image: nhmusgs/base
-    environment:
-      - NHM_DATA_DIR=/var/lib/nhm
+    env_file:
+      - nhm.env
 
   data_loader:
     build:
@@ -29,13 +29,8 @@ services:
     container_name: data-loader
     networks:
       nhmnet:
-    environment:
-      - NHM_DATA_DIR=/var/lib/nhm
-      - HRU_DATA_PKG="Data_hru_shp_v2.tar.gz"
-      - PRMS_DATA_PKG="NHM-PRMS_CONUS.zip"
-      - HRU_SOURCE="ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/Data_hru_shp_v2.tar.gz"
-      - PRMS_SOURCE="ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/markstro/NHM-PRMS_CONUS.zip"
-      - NHM_DRY_RUN
+    env_file:
+      - nhm.env
 
   gridmet:
     build:
@@ -45,8 +40,8 @@ services:
         - "gov.usgs.nhm.image.docker.type=Gridmet Query"
     image: nhmusgs/gridmet
     container_name: gridmet
-    environment:
-      - NHM_DRY_RUN
+    env_file:
+      - nhm.env
       
   ofp:
     build:
@@ -56,10 +51,8 @@ services:
         - "gov.usgs.nhm.image.docker.type=OFP"
     image: nhmusgs/ofp
     container_name: ofp
-    environment:
-      - NHM_DRY_RUN
-      - NHM_DATA_DIR=/var/lib/nhm
-      - NUMDAYS=${NUMDAYS-60}
+    env_file:
+      - nhm.env
 
   ncf2cbh:
     build:
@@ -69,8 +62,8 @@ services:
         - "gov.usgs.nhm.image.docker.type=NCF2CBH"
     image: nhmusgs/ncf2cbh
     container_name: ncf2cbh
-    environment:
-      - NHM_DRY_RUN
+    env_file:
+      - nhm.env
 
   nhm-prms:
     build:
