Added NHM_DATA_DIR variable and removed "export" commands.

--- a/nhm.env
+++ b/nhm.env
@@ -2,44 +2,41 @@
 #
 # File - nhm.env
 #
-# Purpose - Set NHM environment variables for the benefit of Shifter.
+# Purpose - Set NHM environment variables.
 #
 # Author - Andrew Halper
 #
 
-# Set environment variables for the benefit of Shifter, and only for
-# the benefit of Shifter. If running on Docker, this file will have no
-# effect.
+# path to download/data directory on local file-system; set to "/nhm"
+# when build for Shifter on HPC
+NHM_DATA_DIR=/var/lib/nhm
 
 # name of HRU shapefile archive
-export HRU_DATA_PKG=Data_hru_shp_v2.tar.gz
+HRU_DATA_PKG=Data_hru_shp_v2.tar.gz
 
 # name of PRMS data file archive
-export PRMS_DATA_PKG=NHM-PRMS_CONUS.zip
+PRMS_DATA_PKG=NHM-PRMS_CONUS.zip
 
 # HRU shapefile archive URL
-export HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
+HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
 
 # PRMS data file archive URL
-export PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/markstro/$PRMS_DATA_PKG
-
-# path to download/data directory on local file-system
-export NHM_DATA_DIR=/nhm
+PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/markstro/$PRMS_DATA_PKG
 
 # When "true", tell the Docker entry-point scripts to print values of
 # relevant environment variables to stdout, then exit, without running
 # data processing process in container. Useful for debugging.
-export NHM_DRY_RUN=false
+NHM_DRY_RUN=false
 
 # When "true", skip running the gridmet container. Up-to-date Gridmet
 # data is not typically available until ~2:00 p.m., so disabling the
 # gridmet container can be useful in development to prevent the
 # pipeline from stopping at this step with an error.
-export GRIDMET_DISABLE=false
+GRIDMET_DISABLE=false
 
 # Simulation interval. Presently used only in testing to diminish
 # pipeline run-time to a point where interactive testing is
 # feasible. Format is ISO 8601 time interval
 # (https://en.wikipedia.org/wiki/ISO_8601#Time_intervals). Set to
 # 2019-08-21/2019-08-22 presently, if/when needed.
-export NHM_INTERVAL=
+NHM_INTERVAL=
