--- a/nhm.env
+++ b/nhm.env
@@ -8,7 +8,7 @@
 #
 
 # path to download/data directory on local file-system; set to "/nhm"
-# when build for Shifter on HPC
+# when building for Shifter on HPC
 NHM_DATA_DIR=/var/lib/nhm
 
 # name of HRU shapefile archive
@@ -39,4 +39,4 @@ GRIDMET_DISABLE=false
 # feasible. Format is ISO 8601 time interval
 # (https://en.wikipedia.org/wiki/ISO_8601#Time_intervals). Set to
 # 2019-08-21/2019-08-22 presently, if/when needed.
-NHM_INTERVAL=
+NHM_INTERVAL=2019-08-21/2019-08-22
