Added to a comment.

--- a/nhm.env
+++ b/nhm.env
@@ -8,7 +8,8 @@
 #
 
 # path to download/data directory on local file-system; set to "/nhm"
-# when building for Shifter on HPC
+# when building for Shifter on HPC (Shifter does not allow mounts
+# under /var)
 NHM_DATA_DIR=/var/lib/nhm
 
 # name of HRU shapefile archive
